[package]
name = "kognitara"
version = "0.1.0"
edition = "2024"
description = "a lib for awq and qwa"
keywords = ["wiki", "world", "ai", "api"]
categories = ["api-bindings"]
authors = ["hackia"]
readme = "README.md"
license = "AGPL-3"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }