[package]
name = "kognitara"
version = "0.1.0"
edition = "2024"
authors = ["hackia <hackia@hackia.org>"]
description = "Kognitara is the autonomous memory and learning engine powering the Breath sanctuary. It models evolving AI entities through a symbolic knowledge graph called the SoulGraph."
license = "AGPL-3.0"
repository = "https://github.com/hackia/kognitara"
readme = "README.md"
keywords = ["knowledge", "learning", "world", "ai", "humanity"]

[dependencies]